# openmp-nodejs

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md
dependencies/: CMakeLists.txt
dependencies/minhook/: CMakeLists.txt
dependencies/open.mp-sdk/: CMakeLists.txt
openmp-nodejs/: CMakeLists.txt
openmp-nodejs/include/: CommonFunctions.hpp  IJavaScriptClassExtension.hpp  NodejsComponent.hpp  Resource.hpp  ResourceManager.hpp  Utils.hpp  V8Class.hpp  Winfixes.hpp  bootstrapjs.hpp  common.hpp
openmp-nodejs/include/classes/: CheckpointExtension.hpp  ClassesExtension.hpp  MenuExtension.hpp  ObjectExtension.hpp  PawnExtension.hpp  PickupExtension.hpp  PlayerExtension.hpp  TextDrawExtension.hpp  VehicleExtension.hpp
openmp-nodejs/include/components/: CheckpointComponent.hpp  ClassesComponent.hpp  MenuComponent.hpp  ObjectComponent.hpp  PickupComponent.hpp  PlayerComponent.hpp  TextdrawComponent.hpp  VehicleComponent.hpp
openmp-nodejs/include/components/events/: CheckpointEventsComponent.hpp  ClassEventsComponent.hpp  CustomModelEventsComponent.hpp  DialogEventsComponent.hpp  MenuEventsComponent.hpp  ObjectEventsComponent.hpp  PickupEventsComponent.hpp  PlayerEventsComponent.hpp  TextdrawEventsComponent.hpp  VehicleEventsComponent.hpp
openmp-nodejs/include/events/: CheckpointEventsExtension.hpp  ClassEventsExtension.hpp  CustomModelEventsExtension.hpp  DialogEventsExtension.hpp  MenuEventsExtension.hpp  ObjectEventsExtension.hpp  PawnEventsExtension.hpp  PickupEventsExtension.hpp  PlayerEventsExtension.hpp  TextDrawEventsExtension.hpp  VehicleEventsExtension.hpp
openmp-nodejs/include/extensions/: DbExtension.hpp
openmp-nodejs/include/modules/streamer/: StreamerModule.hpp  StreamerModuleEvents.hpp  StreamerObjectExtension.hpp
openmp-nodejs/js/: functions.d.ts  index.d.ts  package.json  types.d.ts
openmp-nodejs/js/modules/: streamer.d.ts
openmp-nodejs/src/: CommonFunctions.cpp  NodejsComponent.cpp  Resource.cpp  ResourceManager.cpp  Utils.cpp  Winfixes.cpp  main.cpp
openmp-nodejs/src/classes/: CheckpointExtension.cpp  ClassesExtension.cpp  MenuExtension.cpp  ObjectExtension.cpp  PawnExtension.cpp  PickupExtension.cpp  PlayerExtension.cpp  TextDrawExtension.cpp  VehicleExtension.cpp
openmp-nodejs/src/components/: CheckpointComponent.cpp  ClassesComponent.cpp  MenuComponent.cpp  ObjectComponent.cpp  PickupComponent.cpp  PlayerComponent.cpp  TextdrawComponent.cpp  VehicleComponent.cpp
openmp-nodejs/src/components/events/: CheckpointEventsComponent.cpp  ClassEventsComponent.cpp  CustomModelEventsComponent .cpp  DialogEventsComponent.cpp  MenuEventsComponent.cpp  ObjectEventsComponent.cpp  PickupEventsComponent.cpp  PlayerEventsComponent.cpp  TextdrawEventsComponent.cpp  VehicleEventsComponent.cpp
openmp-nodejs/src/events/: CheckpointEventsExtension.cpp  ClassEventsExtension.cpp  CustomModelEventsExtension.cpp  DialogEventsExtension.cpp  MenuEventsExtension.cpp  ObjectEventsExtension.cpp  PawnEventsExtension.cpp  PickupEventsExtension.cpp  PlayerEventsExtension.cpp  TextDrawEventsExtension.cpp  VehicleEventsExtension.cpp
openmp-nodejs/src/extensions/: DbExtension.cpp
openmp-nodejs/src/modules/streamer/: StreamerModule.cpp  StreamerModuleEvents.cpp  StreamerObjectExtension.cpp
